[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu/Settings/PanelTheme.tres" type="Theme" id=1]
[ext_resource path="res://MainMenu/Settings/Settings.tres" type="Theme" id=2]
[ext_resource path="res://Game/DifficultySelector/Difficulty.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=2]
HSeparator/styles/separator = SubResource( 1 )

[node name="Difficulty" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 98.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 442.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="VBoxContainer"]
margin_right = 604.0
margin_bottom = 61.0
theme = ExtResource( 2 )
text = "Easy"

[node name="Normal" type="Button" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 604.0
margin_bottom = 126.0
theme = ExtResource( 2 )
text = "Normal"

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 604.0
margin_bottom = 191.0
theme = ExtResource( 2 )
text = "Hard"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 195.0
margin_right = 604.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 604.0
margin_bottom = 226.0
theme = SubResource( 2 )

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 604.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ultra Violence" type="Button" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 604.0
margin_bottom = 319.0
theme = ExtResource( 2 )
text = "Ultra Violence"

[node name="Nightmare" type="Button" parent="VBoxContainer"]
margin_top = 323.0
margin_right = 604.0
margin_bottom = 384.0
theme = ExtResource( 2 )
text = "Nigthmare"

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra Violence" to="." method="_on_Ultra_Violence_pressed"]
[connection signal="pressed" from="VBoxContainer/Nightmare" to="." method="_on_Nightmare_pressed"]
